src/HomeworkFour/03_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
#    nginx.ingress.kubernetes.io/use-regex: "true"
#    nginx.ingress.kubernetes.io/rewrite-target: /health/$2
  name: otus-ingress-rewrite
  namespace: otus
spec:
    ingressClassName: nginx
    rules:
      - host: arch.homework
        http:
          paths:
            - pathType: ImplementationSpecific
              backend:
                service:
                  name: otus-service
                  port:
                    number: 80
              path: /otusapp/(.*)/health
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: otus-ingress
  namespace: otus
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: otus-service
                port:
                  number: 80
            path: /
